Removed an old artifact that caused scrollbar flakiness when moving the cursor while the view is scrolled to the very bottom and dynamic word-wrap is on.

BUG: 118584

svn path=/branches/KDE/3.5/kdelibs/; revision=555118